--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -29,7 +29,7 @@ table { border-collapse: collapse; border-spacing: 0; }
 
 /* #Prototype Styles
 ================================================== */
-html, body { background-color: #1a948d; }
+html, body { background-color: #23ACB2; }
 
 body { background-image: url('http://conn.oss-cn-shenzhen.aliyuncs.com/cq/res/bg.jpg'); background-repeat: no-repeat; background-position: top center; width: 100%; background-size: cover; height: 100%; min-height: 1000px; overflow: hidden; font-family: 'quicksandlight', Helvetica, Arial; color: #FFFFFF; text-shadow: -1px -1px 4px rgba(0, 0, 0, .35); filter: dropshadow(color=#000000, offx=1, offy=1); }
 
