--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,9 @@
 	
 	#contentContainer
 	{
+		width: 100%;
+		height: 100%;
 		position:absolute;
-		margin-left:-500px;
-		margin-top:-500px;
-		left:50%;
-		top:50%;
-		width:1000px;
-		height:1000px;
 		z-index: 0;
 	}
 	
