--- a/css/style.css
+++ b/css/style.css
@@ -22,17 +22,15 @@
 		height: 100%;
 		position:absolute;
 		z-index: 0;
+		overflow: hidden;
 	}
 	
 	#carouselContainer
 	{
+		width: 100%;
+		height: 100%;
 		position:absolute;
-		margin-left:-500px;
-		margin-top:-500px;
-		left:50%;
-		top:70%;
-		width:1000px;
-		height:1000px;
+		z-index: 0;
 	}
 	
 	.carouselItem,.archer,.hunter,.wizard,.priest,.warrior,.paladin
