--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,9 @@
 	
 	#contentContainer
 	{
-		width: 1000px;
+		width: 100%;
 		height: 1000px;
+		overflow: hidden;
 		z-index: 0;
 		margin:0 auto;
 	}
