--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,11 @@
 	
 	#contentContainer
 	{
+        position:absolute;
+        top:0;
+        bottom:0;
 		width: 100%;
-		height: 1000px;
+		height: 100%;
 		overflow: hidden;
 		z-index: 0;
 		margin:0 auto;
