--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -29,7 +29,7 @@ table { border-collapse: collapse; border-spacing: 0; }
 
 /* #Prototype Styles
 ================================================== */
-html, body { background-color: #23ACB2;}
+html, body { background-color: #23ACB2; }
 
 body { background-image: url('http://conn.oss-cn-shenzhen.aliyuncs.com/cq/res/bg.jpg'); background-repeat: no-repeat; background-position: top center; width: 100%; background-size: cover; height: 100%; min-height: 1000px; overflow: hidden; font-family: 'quicksandlight', Helvetica, Arial; color: #FFFFFF; text-shadow: -1px -1px 4px rgba(0, 0, 0, .35); filter: dropshadow(color=#000000, offx=1, offy=1); }
 
@@ -43,14 +43,14 @@ a { color: rgba( 255, 255, 255, .65 ); text-decoration: none; }
 
 a:hover { color: rgba( 255, 255, 255, 1 ); }
 
-.header { color: #fff2f1; text-align: right; text-shadow: 1px 0px 0 #960101,-1px 0px 0 #960101,0px 1px 0 #960101,0px -1px 0 #960101;z-index: 9; margin-right: 10px;position: absolute;top:0;right:0;}
+.header { color: #fff2f1; text-align: right; line-height: 46px; text-shadow: 1px 0px 0 #960101,-1px 0px 0 #960101,0px 1px 0 #960101,0px -1px 0 #960101; z-index: 9; margin-right: 10px; position: absolute; top: 0; right: 0; }
 
-.enname { font-size: 50px; font-family: "Visitor TT1 BRK","Fixedsys","Terminal","Simsun",serif; /*overflow: hidden;*/ }
+.enname { font-size: 50px; /*overflow: hidden;*/ }
 
-.enname a { color: #fff2f1; text-decoration: none; border-bottom: 1px solid #fff2f1; }
+.enname a { color: #fff2f1; text-decoration: none; border-bottom: 1px solid #fff2f1;  font-family: "Visitor TT1 BRK","Fixedsys","Terminal","Simsun",serif;}
 
 .enname a:hover { /*text-decoration: underline;*/ }
 
-.cnname { font-size: 18px; font-family: "Simsun"; }
+.cnname { font-size: 18px; font-family: "Simsun";  }
 
 .debug { color: #fff; text-shadow: none; position: absolute; left: 10px; top: 10px; }
